FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Period</label>
    <referenceTo>FSL_Accounting_Period__c</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>