FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation</label>
    <referenceTo>npsp__Allocation__c</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>