FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( ISPICKVAL( Debit_Credit__c, &quot;Debit&quot; ), 
  Debit__c, 
  Credit__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>