FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>