FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <label>Debit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>