FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/Debit_Credit__c.field-meta.xml
<CustomField>
    <fullName>Debit_Credit__c</fullName>
    <label>Debit/Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>