FundraisingSubledgerTriggerActions/force-app/main/default/objects/FSL_Journal_Entry__c/fields/GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Name__c</fullName>
    <label>GL Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>